fix locations alignment and add locations paragraph text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,17 +157,18 @@ h1, h2 {
 }
 
 .hero-small-title button {
+    font-family: Dongle, sans-serif;
     background-color: #f19482;
-    border-radius: 12px;
-    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    padding: 5px 20px 5px 20px;
     color: #ffffff;
     font-weight: 700;
-    font-size: 0.7em;
+    font-size: 1em;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 100px;
+    margin-top: 120px;
 
 }
 
@@ -199,21 +200,40 @@ h1, h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 40px;
+    line-height: 25px;
+    padding-bottom: 20px;
  }
 
- .locations-content button {
-    background-color: #f19482;
-    border-radius: 12px;
-    padding: 10px 20px 10px 20px;
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 0.7em;
+ .locations-content p {
+    font-size: 1em;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 100px;
+    margin-top: 30px;
+    padding-top: 180px;
+    padding-bottom: 100px;
+    line-height: 25px;
+ }
+
+ .locations-content span {
+    font-weight: 700;
+    color: #ee8686;
+ }
+
+ .locations-content button {
+    font-family: Dongle, sans-serif;
+    background-color: #f19482;
+    border-radius: 10px;
+    padding: 5px 20px 5px 20px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 1em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 150px;
     z-index: 4;
 
  }
